--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "deploy-prod": "twilio-run deploy --account-sid=$ACCOUNT_SID --auth-token=$AUTH_TOKEN --override-existing-project --environment=prod"
   },
   "devDependencies": {
+    "@evanpurkhiser/eslint-config": "^0.13.0",
     "@twilio-labs/serverless-runtime-types": "^2.2.3",
     "@types/node-fetch": "^2.5.7",
+    "eslint": "^8.33.0",
     "prettier": "^2.8.3",
-    "twilio-cli": "^5.3.2",
+    "twilio-cli": "^5.3.3",
     "twilio-run": "^3.5.3",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@sentry/node": "^7.33.0",
+    "@sentry/node": "^7.36.0",
     "node-fetch": "^3.3.0",
     "twilio": "^3.84.1"
   },
