--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig.json",
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
+    "target": "ES6",
+    "module": "CommonJS",
     "outDir": "./functions",
     "rootDir": "./src",
     "strict": false,
+    "moduleResolution": "node",
     "esModuleInterop": true
   },
   "include": ["src/**/*"]
