--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "callbox",
+  "name": "keyway",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -17,7 +17,6 @@
     "@types/node-fetch": "^2.5.7",
     "eslint": "^8.33.0",
     "prettier": "^2.8.3",
-    "twilio-cli": "^5.3.3",
     "twilio-run": "^3.5.3",
     "typescript": "^4.9.5"
   },
