--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,15 +10,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: volta-cli/action@v4
-
-      - name: Make envfile
+      - name: Create .env
         uses: spicypizza/create-envfile@v1.3
         with:
           envkey_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID }}
           envkey_AUTH_TOKEN: ${{ secrets.TWILIO_AUTH_TOKEN }}
           envkey_SENTRY_DNS: ${{ secrets.SENTRY_DNS }}
       - run: yarn
-      - name: Deploying to Twilio
-        run: yarn deploy
-      - name: Activate in production
-        run: yarn activate
+      - run: yarn deploy
+      - run: yarn activate
