--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "yarn": "1.22.19"
   },
   "twilioserverless": {
-    "runtime": "node16"
+    "runtime": "node16",
+    "serviceSid": "ZS51962355de37af6d9d171e4e681d0e82"
   }
 }
